# forge

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  conftest.py  docker-compose.dev.yml  install.sh  pyproject.toml
Formula/: forge.rb
docs/: adding-a-new-agent.md  adding-a-new-integration.md  architecture.md  configuration.md  phase2.md  runbook.md  trust.md
forge/: main.py
forge/agents/: __init__.py  base.py
forge/agents/captain/: __init__.py  agent.py  graph.py  prompts.py
forge/agents/cicd_specialist/: __init__.py  agent.py  pipeline_generators.py  prompts.py
forge/agents/cloud_specialist/: __init__.py  agent.py  prompts.py
forge/agents/docker_specialist/: __init__.py  agent.py  generators.py  prompts.py
forge/agents/k8s_specialist/: __init__.py  agent.py  kubectl_client.py  manifest_generator.py  prompts.py
forge/agents/librarian/: __init__.py  agent.py  ast_analyzer.py  github_client.py
forge/agents/manager/: __init__.py  agent.py  orchestrator.py
forge/agents/platform_specialist/: __init__.py  generators.py
forge/agents/remediation/: __init__.py  agent.py  fix_evaluator.py  rollback_controller.py
forge/agents/sandbox_tester/: __init__.py  agent.py  prompts.py  vcluster_client.py
forge/agents/serverless_specialist/: __init__.py  generators.py
forge/agents/watchman/: __init__.py  agent.py  loki_client.py  prompts.py
forge/api/: __init__.py  app.py  dependencies.py
forge/api/routers/: approvals.py  slack_webhooks.py  swarm.py
forge/api/tests/: test_api.py
forge/cli/: __init__.py  main.py  runtime.py
forge/cli/commands/: approvals.py  ask.py  audit.py  build.py  chaos.py  chat.py  connect.py  deploy.py  doctor.py  explain.py  index.py  init.py  manager_context.py  monitor.py  reset.py  setup.py  status.py
forge/cli/tests/: test_cli.py  test_setup_doctor_reset.py
forge/conversation/: __init__.py  engine.py  prompts.py  questions.py  strategy_ranking.py  strategy_selector.py
forge/core/: __init__.py  approvals.py  audit.py  builds.py  checkpoints.py  config.py  events.py  exceptions.py  hardening.py  llm.py  logging.py  message_bus.py  observability.py  registry.py  resume.py  secrets.py  strategies.py  workspace.py
forge/integrations/: __init__.py  base.py  kubernetes.py  slack.py
forge/orchestrator/: __init__.py  graph.py
forge/orchestrator/tests/: test_orchestrator.py
infrastructure/docker/: Dockerfile
infrastructure/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
scripts/: record-demo.sh  release.sh  run_chaos_tests.sh  setup_dev.sh
swarm/: main.py
swarm/agents/: __init__.py  base.py
swarm/agents/captain/: __init__.py  (+2 more)
swarm/api/: __init__.py  app.py  middleware.py
swarm/cli/: __init__.py  main.py  runtime.py
swarm/core/: __init__.py  approvals.py  config.py  events.py  hardening.py  llm.py  logging.py  message_bus.py  observability.py  registry.py  secrets.py
swarm/integrations/: __init__.py  github.py  jira.py  loki.py  prometheus.py  slack.py
swarm/orchestrator/: __init__.py  graph.py  state.py
tests/: conftest.py  test_audit.py  test_conversation_engine.py  test_generator_snapshots.py  test_hallucination_guard.py  test_hardening.py  test_in_memory_bus.py  test_llm.py  test_message_bus.py  test_observability.py  test_rollback_controller.py  test_strategy_ranking.py  test_strategy_selector.py
tests/e2e/: conftest.py  test_generation_path_e2e.py  test_incident_e2e.py  test_k8s_project_e2e.py  test_rollback_drill.py  test_simple_project_e2e.py
tests/integration/: test_live_gate.py  test_slack_webhook_flow.py
tests/snapshots/: node_express.Dockerfile  node_express.github-actions.yml  python_fastapi.Dockerfile  python_fastapi.deployment.yaml  python_fastapi.docker-compose.yml  python_fastapi.github-actions.yml  python_fastapi.service.yaml
(+75 files in other folders)
